Fixing stretched appearance in Carousel thumbnails
Fixing stretched appearance in Carousel thumbnails - making them
vertically longer (rectangular) - 200 x 250px instead of 200 x 200
(squared).

--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -53,7 +53,7 @@
 }
 .nail {
 	width: 200px;
-	height: 200px;
+	height: 250px;
 	overflow: hidden;
 	background-image: url(../images/thumbs/Karuna.jpg);
 	background-repeat: no-repeat;
